--- a/T,H&L.html
+++ b/T,H&L.html
@@ -30,7 +30,7 @@
             <dd>Cookies & Cream Ice Cream</dd>
         </dl>
 
-        <table border="4" bgcolor="red">
+        <table border="4" bgcolor="yellow">
             <tr>
                 <th bgcolor="pink" border="9">Country</th>
                 <th>Citizens Identified As</th>
